--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<html><head><meta http-equiv="refresh" content="0; url=docs/current/Lifecycle/index.html" /></head></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://swiftpackageindex.com/swift-server/swift-service-lifecycle/documentation'" />
+  </head>
+</html>
